finalizando API métodos put e delete

--- a/.gitignore
+++ b/.gitignore
@@ -1951,3 +1951,7 @@ node_modules/xdg-basedir/index.js
 node_modules/xdg-basedir/license
 node_modules/xdg-basedir/package.json
 node_modules/xdg-basedir/readme.md
+node_modules/redux
+node_modules/react-redux
+node_modules/react-is
+node_modules
