--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   }
 }
